Prevent wrapping and show ellipsis

--- a/src/app/components/concept.component.scss
+++ b/src/app/components/concept.component.scss
@@ -15,6 +15,9 @@
 
   h3 {
     margin: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 
